# hetzner-dns-tools

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  help.txt  hetzner-dns-cli  hetzner_dns_helpers.py  pyproject.toml  record_create.py  record_delete.py  record_get.py  record_list.py  record_update.py  setup.cfg  setup.py  zone_create.py  zone_delete.py  zone_get.py  zone_list.py  zone_update.py  zone_update_original.py
records/: record_list.py
src/: hetzner-dns-cli  hetzner-dns-tools
src/hetzner_dns_cli/: record_create.py  record_get.py  zone_create.py  zone_delete.py  zone_list.py
src/hetzner_dns_tools/: hetzner_dns_helpers.py  record_create.py  record_delete.py  record_get.py  record_list.py  record_update.py  zone_get.py
zones/: zone_create.py  zone_delete.py  zone_get.py  zone_list.py  zone_update.py
