[metadata]
name = hetzner-dns-cli
version = 0.0.1
license = MIT
author = Nicholas Moen
author_email = arcanemachine@tutanota.com
description = Simple Hetzner DNS API client for Python and Bash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arcanemachine/hetzner-dns-cli
project_urls=
    Bug Tracker = https://github.com/arcanemachine/hetzner-dns-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
scripts =
    src/hetzner-dns-cli
python_required = >=3.6

[options.packages.find]
where = src

