[metadata]
name = hetzner-dns-tools
version = 0.0.8
license = MIT
author = Nicholas Moen
author_email = arcanemachine@tutanota.com
description = A simple Hetzner DNS API client for Python and Bash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arcanemachine/hetzner-dns-tools
project_urls=
    Bug Tracker = https://github.com/arcanemachine/hetzner-dns-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
scripts =
    src/hetzner-dns-tools
python_required = >=3.6
install_requires =
  requests

[options.packages.find]
where = src

